<resources>
    <string name="app_name">CartesEletroniques</string>
    <string name="email">Email</string>
    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
    <string name="commen_er">Commençer</string>
    <string name="se_connecter">Se Connecter</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="mot_de_passe">Mot De passe</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié</string>
    <string name="todo">TODO</string>
    <string name="verifaction_de_mot_de_passe">Verifaction de mot de passe</string>
    <string name="cr_er">créer</string>
    <string name="vous_avez_d_ja_un_compte">vous avez déja un compte!</string>
    <string name="sendmypassword">SendMyPassWord</string>
    <string name="envoyer_mon_mot_de_passe">Envoyer mon mot de passe</string>
    <string name="aboutus">Carteelectronique est une application destinée aux utilisateurs qui sont motivé pour le système embarqué afin d\'enrichir ses informations il contient un ensemble des cours avec des qcm et une note pour sauvegarder vos remarques..</string>
    <string name="d_butant">Débutant</string>
    <string name="interm_diare">Intermédiare</string>
    <string name="expert">Expert</string>
    <string name="c_o_u_r">C O U R</string>
    <string name="q_c_m">Q C M</string>
    <string name="etude_de_fabrication_des_circuits_imprim_s">Etude de fabrication des circuits imprimés</string>
    <string name="la_conception_assist_e_par_ordinateur_des_se">La conception assistée par ordinateur des SE</string>
    <string name="cao_electronique_logiciel_proteus_isis">CAO electronique logiciel proteus ISIS</string>
    <string name="t_e_s_t_3">T E S T 3</string>
    <string name="t_e_s_t_2">T E S T 2</string>
    <string name="t_e_s_t_1">T E S T 1</string>
    <string name="_2_la_fabrication_de_la_carte">2-- La fabrication de la carte</string>
    <string name="lectronique_n_cessite">électronique nécessite :</string>
    <string name="a_l_assemblage_d_une_ou_de_plusieurs_couches_de_cuivre_fines_pour_g_rer_l_alimentation_des_diff_rents_composants">a. L’assemblage d’une ou de plusieurs couches de cuivre fines pour gérer l’alimentation des différents composants</string>
    <string name="b_l_assemblage_d_une_ou_de_plusieurs_couches_de_cuivre_fines_dans_le_but_d_obtenir_en_fin_de_compte_des_pistes_termin_es_par_des_pastilles">b. l’assemblage d’une ou de plusieurs couches de cuivre fines dans le but d’obtenir en fin de compte des pistes terminées par des pastilles.</string>
    <string name="c_l_assemblage_d_une_ou_de_plusieurs_couches_de_cuivre_fines_pour_mettre_en_place_un_circuit_lectronique_complexe">c. l’assemblage d’une ou de plusieurs couches de cuivre fines pour mettre en place un circuit électronique complexe</string>
    <string name="_2_quelles_sont_les_proc_d_s">2-- Quelles sont les procédés</string>
    <string name="introduits_par_l_cfoa">introduits par l’CFOA:</string>
    <string name="a_per_age">a. Perçage</string>
    <string name="b_test_circuits">b. Test circuits</string>
    <string name="c_implantation_des_composants">c. Implantation des composants</string>
    <string name="d_qualification">d. Qualification</string>
    <string name="d">d</string>
    <string name="_3_quelle_est_l_extension">3-- Quelle est l’extension</string>
    <string name="qui_n_appartient_pas_aux_fichiers_gerber">qui n’appartient pas aux fichiers GERBER</string>
    <string name="a_gto">a. GTO</string>
    <string name="c_gbi">c. GBI</string>
    <string name="b_gdd">b. GDD</string>
    <string name="d_gtl">d. GTL</string>
    <string name="e_gtd">e. GTD</string>
    <string name="e">e</string>
    <string name="_3_le_fichier_netlist_repr_sente">3-- Le fichier Netlist représente :</string>
    <string name="a_l_ensemble_des_composants_utilis_s_dans_un_sch_ma_lectronique">a. L\'ensemble des composants utilisés dans un schéma électronique</string>
    <string name="b_l_emplacement_des_pistes_et_des_pastilles_pour_la_phase_de_routage">b. L’emplacement des pistes et des pastilles pour la phase de routage</string>
    <string name="c_les_connections_effectu_es_entre_les_composants">c. Les connections effectuées entre les composants</string>
    <string name="_3_les_pistes_doivent_tre">3-- Les pistes doivent être</string>
    <string name="et_des_courts_circuits_par_l_utilisation_de">et des courts-circuits par l’utilisation de :</string>
    <string name="b_d_une_couche_de_cuivre">b. D’une couche de cuivre</string>
    <string name="c_d_une_couche_de_vernis_color">c. D’une couche de vernis coloré</string>
    <string name="a_d_une_couche_de_r_sine">a. D’une couche de résine</string>
    <string name="prot_g_de_l_oxydation_et">protégé de l’oxydation et</string>
    <string name="_2_quelle_est_la_deuxi_me_tape">2-- Quelle est la deuxiéme étape</string>
    <string name="pour_le_soudage_des_composants_traversants">pour le soudage des composants traversants :</string>
    <string name="a_placer_le_fer_souder_sur_la_piste">a. Placer le fer à souder sur la piste</string>
    <string name="d_approcher_de_l_tain">d. Approcher de l\'étain</string>
    <string name="c_retirer_le_fil">c. Retirer le fil</string>
    <string name="b_chauffer_la_pastille">b. chauffer la pastille</string>
    <string name="_2_le_format_de_fichier_gerber">2-- Le format de fichier GERBER</string>
    <string name="permet_de">permet de :</string>
    <string name="a_un_circuit_imprim_contient_des_pistes_conductrices_grav_es_sur_le_cuivre">a. Un circuit imprimé contient des pistes conductrices gravées sur le cuivre</string>
    <string name="b_un_circuit_imprim_avec_des_pastilles_bien_perc_es">b. Un circuit imprimé avec des pastilles bien percées</string>
    <string name="c_une_plaque_lectronique_qui_assure_la_liaison_entre_des_composants_lectronique">c. Une plaque électronique qui assure la liaison entre des composants électronique</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">C</string>
    <string name="a_des_composants_cms_sur_une_seule_face_de_la_carte">a. Des composants CMS sur une seule face de la carte</string>
    <string name="b_des_composants_traversant_sur_la_m_me_face_de_la_carte">b. Des composants traversant sur la même face de la carte</string>
    <string name="d_des_composants_traversants_sur_une_face_et_des_composants_cms_sur_l_autre_face_de_la_carte">d. Des composants Traversants sur une face et des composants CMS sur l’autre face de la carte.</string>
    <string name="c_des_composants_cms_et_traversants_sur_la_m_me_face">c. Des composants CMS et Traversants sur la même face</string>
    <string name="type_mixte_contient">type MIXTE contient :</string>
    <string name="_4_un_circuit_imprim_est_de">4-- Un circuit imprimé est de</string>
    <string name="c_r_aliser_un_montage_lectrique">c. Réaliser un montage électrique</string>
    <string name="d_autre">d. Autre</string>
    <string name="b_router_un_sch_ma_lectrique">b. Router un schéma électrique</string>
    <string name="_5_la_premi_re_tape_de">5-- La première étape de</string>
    <string name="a_imprimer_un_typon">a. Imprimer un typon</string>
    <string name="fabriquer_une_carte_lectronique_est">fabriquer une carte électronique est :</string>
    <string name="_2_le_choix_des_composants">2-- Le choix des composants</string>
    <string name="pour_l_tape_de_routage_se_fait_en_fonction_des_contraintes_qui_sont">pour l’étape de routage se fait en fonction des contraintes qui sont:</string>
    <string name="a_la_conductivit_et_la_liaison_des_pistes">a. La conductivité et la liaison des pistes</string>
    <string name="b_l_emplacement_des_composants">b. L’emplacement des composants</string>
    <string name="c_l_effet_de_d_gagement_de_chaleur_de_certains_composants">c. L’effet de dégagement de chaleur de certains composants</string>
    <string name="d_la_composition_de_certain_composant">d. La composition de certain composant</string>
    <string name="_3_les_pistes_reliant_les">3-- Les pistes reliant les</string>
    <string name="diff_rents_composants_sont_pr_sent_s_par">différents composants sont présentés par :</string>
    <string name="_4_les_pastilles_dans_un_sch_ma">4-- Les pastilles dans un schéma</string>
    <string name="lectrique_rout_sont_pr_sent_s_par">électrique routé sont présentés par :</string>
    <string name="a_des_traits_en_violet">a. Des traits en violet</string>
    <string name="b_des_traits_en_vert">b. Des traits en vert</string>
    <string name="c_des_traits_en_bleu">c. Des traits en bleu</string>
    <string name="d_des_traits_en_jaune">d. Des traits en jaune</string>
    <string name="_5_le_typon_est">5-- Le typon est :</string>
    <string name="a_un_dessin_du_circuit_imprim_effectu_sur_un_papier_transparent">a. Un dessin du circuit imprimé effectué sur un papier transparent</string>
    <string name="b_un_dessin_du_circuit_imprim_effectu_sur_un_film_transparent">b. Un dessin du circuit imprimé effectué sur un film transparent</string>
    <string name="c_un_dessin_du_circuit_imprim_effectu_sur_une_couche_transparente">c. Un dessin du circuit imprimé effectué sur une couche transparente</string>
    <string name="_2_le_placement_des_diff_rents">2-- Le placement des différents</string>
    <string name="l_ments_pour_l_insolation_de_la_plaque_est">éléments pour l’insolation de la plaque est :</string>
    <string name="b_typon_plaque_insoleuse">b. Typon / plaque / insoleuse</string>
    <string name="c_plaque_typon_insoleuse">c. Plaque / Typon / Insoleuse</string>
    <string name="a_insoleuse_plaque_typon">a. Insoleuse / Plaque / Typon</string>
    <string name="_3_la_r_v_lation_de_la_plaque_se">3-- La révélation de la plaque se</string>
    <string name="fait_par_un_produit_chimique_qui_est">fait par un produit chimique qui est :</string>
    <string name="b_l_ac_tone">b. L’acétone</string>
    <string name="c_une_solution_de_soude_caustique">c. Une solution de soude caustique</string>
    <string name="a_le_perchlorure_de_fer">a. Le perchlorure de fer</string>
    <string name="_4_le_r_v_lateur_va_dissoudre">4-- Le révélateur va dissoudre</string>
    <string name="les_zones_de">les zones de :</string>
    <string name="a_r_sine_qui_ont_t_d_truites_par_l_insoleuse">a. Résine qui ont été détruites par l’insoleuse</string>
    <string name="b_la_biblioth_que_des_objets">b. La bibliothèque des objets</string>
    <string name="_1_la_simulation_est">1-- La simulation est</string>
    <string name="effectu_e_par_des_appareils_de_mesure_virtuels_comme">effectuée par des appareils de mesure virtuels comme :</string>
    <string name="a_le_multim_tre">a. Le multimètre</string>
    <string name="b_le_thermom_tre">b. Le thermomètre</string>
    <string name="c_l_oscilloscope">c. L’oscilloscope</string>
    <string name="d_le_manom_tre">d. Le manomètre</string>
    <string name="e_l_analyseur_des_spectres">e. L’analyseur des spectres</string>
    <string name="_1_le_mode_gadgets_contient">1-- Le mode gadgets contient :</string>
    <string name="a_les_sondes_de_tension_courant">a. Les sondes de tension / courant</string>
    <string name="c_les_touches_magn_toscope">c. Les touches magnétoscope</string>
    <string name="d_les_graphes_pour_affichage_de_la_simulation">d. Les graphes pour affichage de la simulation</string>
    <string name="_1_le_soudage_des_composants">1-- Le soudage des composants</string>
    <string name="c_soudure_par_infrarouge">c. Soudure par infrarouge</string>
    <string name="b_soudure_par_fer_soud">b. Soudure par fer à soudé</string>
    <string name="a_soudure_la_vague">a. Soudure à la vague</string>
    <string name="cms_se_fait_par">CMS se fait par :</string>
    <string name="d_soudure_en_phase_de_vapeur">d. Soudure en phase de vapeur</string>
</resources>